Realign workflow wizards
